# Containers

./: .gitignore  CMakeLists.txt  README.md
examples/: circular_buffer.cpp  generic_vector.cpp  reserved_pool_allocator.cpp  resource_management_type.hpp  stack_vector.cpp
include/: circular_buffer.hpp  generic_vector.hpp  heap_allocation_policy.hpp  reserved_pool_allocator.hpp  stack_allocation_policy.hpp  stack_vector.hpp
